# json-funny

./: Cargo.toml  result.json  test.json
src/: filter.rs  main.rs
